--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
                     </div>
 
                     <div class="row images">
-                        <img src="./assets/img/client-1.svg" alt="client 1" />
-                        <img src="./assets/img/client-2.svg" alt="client 2" />
-                        <img src="./assets/img/client-3.svg" alt="client 3" />
-                        <img src="./assets/img/client-4.svg" alt="client 4" />
-                        <img src="./assets/img/client-5.svg" alt="client 5" />
+                        <a href="#!"><img src="./assets/img/client-1.svg" alt="client 1" /></a>
+                        <a href="#!"><img src="./assets/img/client-2.svg" alt="client 2" /></a>
+                        <a href="#!"><img src="./assets/img/client-3.svg" alt="client 3" /></a>
+                        <a href="#!"><img src="./assets/img/client-4.svg" alt="client 4" /></a>
+                        <a href="#!"><img src="./assets/img/client-5.svg" alt="client 5" /></a>
                     </div>
                 </div>
             </div>
