Fix bug phần Navbar

--- a/index.html
+++ b/index.html
@@ -12,30 +12,30 @@
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
     <body>
-        <main>
+        <main id="home">
             <!-- Header -->
             <header class="fixed-header">
                 <div class="content">
                     <nav class="navbar">
                         <!-- Logo -->
-                        <img src="./assets/img/logo.svg" alt="Besnik." />
+                        <a href="#home"><img src="./assets/img/logo.svg" alt="Besnik." /></a>
 
                         <!-- Navigation -->
                         <ul>
                             <li>
-                                <a href="#!">Home</a>
+                                <a href="#home">Home</a>
                             </li>
                             <li>
-                                <a href="#!">Features</a>
+                                <a href="#services">Services</a>
                             </li>
                             <li>
-                                <a href="#!">Services</a>
+                                <a href="#features">Features</a>
                             </li>
                             <li>
-                                <a href="#!">Resources</a>
+                                <a href="#resources">Resources</a>
                             </li>
                             <li>
-                                <a href="#!">Contact</a>
+                                <a href="#contact">Contact</a>
                             </li>
                         </ul>
 
@@ -101,7 +101,7 @@
                 </div>
             </div>
 
-            <div class="guides">
+            <div id="services" class="guides">
                 <div class="content">
                     <h2 class="sub-title">How its works?</h2>
                     <p class="desc">
@@ -142,7 +142,7 @@
             </div>
 
             <!-- Featured -->
-            <div class="featured">
+            <div id="features" class="featured">
                 <div class="content">
                     <header>
                         <h2 class="sub-title">Featured Properties</h2>
@@ -211,7 +211,7 @@
                 </div>
             </div>
 
-            <div class="stats">
+            <div id="resources" class="stats">
                 <div class="content">
                     <div class="row">
                         <div class="img-block">
@@ -292,7 +292,7 @@
             </div>
 
             <!-- Subscription -->
-            <div class="subscription">
+            <div id="contact" class="subscription">
                 <div class="content">
                     <div class="body">
                         <div class="info">
