--- a/index.html
+++ b/index.html
@@ -4,70 +4,88 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>F8 Project 01</title>
+        <!-- Favicon -->
+        <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicon/apple-icon-57x57.png" />
+        <link rel="apple-touch-icon" sizes="60x60" href="./assets/favicon/apple-icon-60x60.png" />
+        <link rel="apple-touch-icon" sizes="72x72" href="./assets/favicon/apple-icon-72x72.png" />
+        <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-icon-76x76.png" />
+        <link rel="apple-touch-icon" sizes="114x114" href="./assets/favicon/apple-icon-114x114.png" />
+        <link rel="apple-touch-icon" sizes="120x120" href="./assets/favicon/apple-icon-120x120.png" />
+        <link rel="apple-touch-icon" sizes="144x144" href="./assets/favicon/apple-icon-144x144.png" />
+        <link rel="apple-touch-icon" sizes="152x152" href="./assets/favicon/apple-icon-152x152.png" />
+        <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-icon-180x180.png" />
+        <link rel="icon" type="image/png" sizes="192x192" href="./assets/favicon/android-icon-192x192.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="96x96" href="./assets/favicon/favicon-96x96.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png" />
+        <link rel="manifest" href="./assets/favicon/manifest.json" />
+        <meta name="msapplication-TileColor" content="#ffffff" />
+        <meta name="msapplication-TileImage" content="./assets/favicon/ms-icon-144x144.png" />
+        <meta name="theme-color" content="#ffffff" />
+
+        <!-- Reset CSS -->
         <link rel="stylesheet" href="./assets/css/reset.css" />
+
+        <!-- Font -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
+
+        <!-- Style -->
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
     <body>
-        <main id="home">
-            <!-- Header -->
-            <header class="fixed-header">
-                <div class="content">
-                    <nav class="navbar">
-                        <!-- Logo -->
-                        <a href="#home"><img src="./assets/img/logo.svg" alt="Besnik." /></a>
+        <!-- Header -->
+        <header class="fixed-header">
+            <div class="content">
+                <nav class="navbar">
+                    <!-- Logo -->
+                    <a href="#"><img src="./assets/img/logo.svg" alt="Besnik." /></a>
 
-                        <!-- Navigation -->
-                        <ul>
-                            <li>
-                                <a href="#home">Home</a>
-                            </li>
-                            <li>
-                                <a href="#services">Services</a>
-                            </li>
-                            <li>
-                                <a href="#features">Features</a>
-                            </li>
-                            <li>
-                                <a href="#resources">Resources</a>
-                            </li>
-                            <li>
-                                <a href="#contact">Contact</a>
-                            </li>
-                        </ul>
+                    <!-- Navigation -->
+                    <ul>
+                        <li>
+                            <a href="#">Home</a>
+                        </li>
+                        <li>
+                            <a href="#services">Services</a>
+                        </li>
+                        <li>
+                            <a href="#features">Features</a>
+                        </li>
+                        <li>
+                            <a href="#resources">Resources</a>
+                        </li>
+                        <li>
+                            <a href="#contact">Contact</a>
+                        </li>
+                    </ul>
 
-                        <!-- Action -->
-                        <div class="actions">
-                            <a href="#!" class="action-link">Sign in</a>
-                            <a href="#!" class="btn btn-action">Sign up</a>
-                        </div>
-                    </nav>
-                </div>
-            </header>
+                    <!-- Action -->
+                    <div class="actions">
+                        <a href="#!" class="action-link">Sign in</a>
+                        <a href="#!" class="btn btn-action">Sign up</a>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <main>
             <!-- Hero -->
             <div class="hero-wrap">
                 <div class="content">
-                    <div class="hero">
-                        <div class="info">
-                            <p class="sub-title">Welcome to Besnik Agency</p>
-                            <h1 class="title">Discover a place you'll love to live.</h1>
-                            <p class="desc">
-                                Get the best real estate deals first, before they hit the mass market! HOT FORECLOSURE
-                                DEALS with one simple search
-                            </p>
-                            <a href="#!" class="btn btn-hero">More About Us</a>
-                        </div>
-
-                        <!-- Hero Img -->
-                        <img
-                            class="hero-img"
-                            src="./assets/img/hero-img.svg"
-                            alt="Discover a place you'll love to live."
-                        />
+                    <div class="info">
+                        <p class="sub-title">Welcome to Besnik Agency</p>
+                        <h1 class="title">Discover a place you'll love to live.</h1>
+                        <p class="desc">
+                            Get the best real estate deals first, before they hit the mass market! HOT FORECLOSURE DEALS
+                            with one simple search
+                        </p>
+                        <a href="#!" class="btn btn-hero">More About Us</a>
                     </div>
+
+                    <!-- Hero Img -->
+                    <img class="hero-img" src="./assets/img/hero-img.svg" alt="Discover a place you'll love to live." />
                 </div>
             </div>
 
@@ -306,53 +324,52 @@
                     </div>
                 </div>
             </div>
-
-            <footer class="footer">
-                <div class="content">
-                    <div class="row row-top">
-                        <div class="column">
-                            <h3 class="heading">Product</h3>
-                            <ul class="list">
-                                <li class="item"><a href="#!">Listing</a></li>
-                                <li class="item"><a href="#!">Property</a></li>
-                                <li class="item"><a href="#!">Agents</a></li>
-                                <li class="item"><a href="#!">Blog</a></li>
-                            </ul>
-                        </div>
-                        <div class="column">
-                            <h3 class="heading">Resources</h3>
-                            <ul class="list">
-                                <li class="item"><a href="#!">Our Homes</a></li>
-                                <li class="item"><a href="#!">Member Stories</a></li>
-                                <li class="item"><a href="#!">Video</a></li>
-                                <li class="item"><a href="#!">Free trial</a></li>
-                            </ul>
-                        </div>
-                        <div class="column">
-                            <h3 class="heading">Company</h3>
-                            <ul class="list">
-                                <li class="item"><a href="#!">Patnerships</a></li>
-                                <li class="item"><a href="#!">Terms of use</a></li>
-                                <li class="item"><a href="#!">Privacy</a></li>
-                                <li class="item"><a href="#!">Sitemap</a></li>
-                            </ul>
-                        </div>
-                        <div class="column">
-                            <h3 class="heading">Get in touch</h3>
-                            <p class="desc">You’ll find your next home, in any style you prefer.</p>
-                            <div class="social">
-                                <a href="#!" class="social-link"><img src="./assets/img/facebook.svg" alt="" /></a>
-                                <a href="#!" class="social-link"><img src="./assets/img/twitter.svg" alt="" /></a>
-                                <a href="#!" class="social-link"><img src="./assets/img/linkedin.svg" alt="" /></a>
-                            </div>
-                        </div>
+        </main>
+        <footer class="footer">
+            <div class="content">
+                <div class="row row-top">
+                    <div class="column">
+                        <h3 class="heading">Product</h3>
+                        <ul class="list">
+                            <li class="item"><a href="#!">Listing</a></li>
+                            <li class="item"><a href="#!">Property</a></li>
+                            <li class="item"><a href="#!">Agents</a></li>
+                            <li class="item"><a href="#!">Blog</a></li>
+                        </ul>
                     </div>
-                    <div class="row row-bottom">
-                        <img src="./assets/img/logo.svg" alt="" class="image" />
-                        <p class="copyright">Copyright 2020.com, All rights reserved.</p>
+                    <div class="column">
+                        <h3 class="heading">Resources</h3>
+                        <ul class="list">
+                            <li class="item"><a href="#!">Our Homes</a></li>
+                            <li class="item"><a href="#!">Member Stories</a></li>
+                            <li class="item"><a href="#!">Video</a></li>
+                            <li class="item"><a href="#!">Free trial</a></li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h3 class="heading">Company</h3>
+                        <ul class="list">
+                            <li class="item"><a href="#!">Patnerships</a></li>
+                            <li class="item"><a href="#!">Terms of use</a></li>
+                            <li class="item"><a href="#!">Privacy</a></li>
+                            <li class="item"><a href="#!">Sitemap</a></li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h3 class="heading">Get in touch</h3>
+                        <p class="desc">You’ll find your next home, in any style you prefer.</p>
+                        <div class="social">
+                            <a href="#!" class="social-link"><img src="./assets/img/facebook.svg" alt="" /></a>
+                            <a href="#!" class="social-link"><img src="./assets/img/twitter.svg" alt="" /></a>
+                            <a href="#!" class="social-link"><img src="./assets/img/linkedin.svg" alt="" /></a>
+                        </div>
                     </div>
                 </div>
-            </footer>
-        </main>
+                <div class="row row-bottom">
+                    <img src="./assets/img/logo.svg" alt="" class="image" />
+                    <p class="copyright">Copyright 2020.com, All rights reserved.</p>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
